View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032058 | Open CASCADE | OCCT:Modeling Data | public | 2021-01-15 16:18 | 2021-02-06 14:29 |
Reporter | ifv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032058: Modeling Data - Extrema curve-surface gives wrong result for planar surface of revolution and circle | ||||
Description | Circle practically fully coincides with planar surface of revolution, but algorithm produces two points with large distance between them. | ||||
Steps To Reproduce | test case bug/moddata_3/bug32058 | ||||
Tags | No tags attached. | ||||
Test case number | bugs/moddata_3/bug32058 | ||||
|
res.jpg (31,701 bytes) |
|
bug32058_c (183 bytes) |
|
bug32058_s (99 bytes) |
|
branch CR32058 is ready for review test result is http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR32058-master-IFV/view/COMPARE/ The issue #31912 (0032058 is its child) is not reproduced for this branch |
|
Please raise CR32058 in occt. |
|
Solution elaboration |
|
Solution implementation |
|
Debugging |
|
Combination - OCCT branch : IR-2021-01-22 master SHA - 8948e18df815e356c59a750bd2711cb4a7914cec a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2021-01-22 SHA - 7cb485e51cb439852e1e1e0726af89f51d6d6db0 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17720.020000000055 / 17721.200000000135 [-0.01%] Products Total CPU difference: 12428.380000000123 / 12412.630000000105 [+0.13%] Windows-64-VC14: OCCT Total CPU difference: 19367.234375 / 19300.265625 [+0.35%] Products Total CPU difference: 13821.875 / 13740.03125 [+0.60%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32058_31912-751 has been created by ifv. SHA-1: b4f2e3b132d654ead426c7f34116af47a1005752 Detailed log of new commits: Author: ifv Date: Tue Jan 12 16:14:35 2021 +0300 0032058: Modeling Data - Extrema curve-surface gives wrong result for planar surface of revolunion and circle Extrema_GenExtCS.cxx : added solution refinement, if solution seems to be "bad" according to special criteria. Extrema_FuncExtCS.cxx : "cosmetic" modifications BOPAlgo_PaveFiller_3.cxx : adding control of shape index to prevent exception in ShapeInfo bugs/moddata_3/bug32058 : new test Author: emv Date: Thu Jan 28 13:02:08 2021 +0300 0031912: Modeling Algorithms - Boolean Cut can't build resulting shape Problem is fixed by 0032058. Integrating test case only. |
|
Branch CR32058_31912-751 has been deleted by ifv. SHA-1: b4f2e3b132d654ead426c7f34116af47a1005752 |
|
Branch CR32058_751 has been created by ifv. SHA-1: edf111202c4ede9f862a59fa8cb49f01e8f47ee7 Detailed log of new commits: Author: ifv Date: Tue Jan 12 16:14:35 2021 +0300 0032058: Modeling Data - Extrema curve-surface gives wrong result for planar surface of revolunion and circle Extrema_GenExtCS.cxx : added solution refinement, if solution seems to be "bad" according to special criteria. Extrema_FuncExtCS.cxx : "cosmetic" modifications BOPAlgo_PaveFiller_3.cxx : adding control of shape index to prevent exception in ShapeInfo bugs/moddata_3/bug32058 : new test |
|
Branch CR32058_751 has been deleted by inv. SHA-1: edf111202c4ede9f862a59fa8cb49f01e8f47ee7 |
occt: master b007889e 2021-01-12 13:14:35 Committer: bugmaster Details Diff |
0032058: Modeling Data - Extrema curve-surface gives wrong result for planar surface of revolunion and circle Extrema_GenExtCS.cxx : added solution refinement, if solution seems to be "bad" according to special criteria. Extrema_FuncExtCS.cxx : "cosmetic" modifications BOPAlgo_PaveFiller_3.cxx : adding control of shape index to prevent exception in ShapeInfo bugs/moddata_3/bug32058 : new test |
Affected Issues 0032058 |
|
mod - src/BOPAlgo/BOPAlgo_PaveFiller_3.cxx | Diff File | ||
mod - src/Extrema/Extrema_FuncExtCS.cxx | Diff File | ||
mod - src/Extrema/Extrema_GenExtCS.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug32058 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-01-15 16:18 | ifv | New Issue | |
2021-01-15 16:18 | ifv | Assigned To | => ifv |
2021-01-15 16:26 | ifv | File Added: res.jpg | |
2021-01-15 16:27 | ifv | File Added: bug32058_c | |
2021-01-15 16:27 | ifv | File Added: bug32058_s | |
2021-01-15 16:33 | ifv | Steps to Reproduce Updated | |
2021-01-20 12:37 | ifv | Note Added: 0098249 | |
2021-01-20 12:37 | ifv | Assigned To | ifv => emv |
2021-01-20 12:37 | ifv | Status | new => resolved |
2021-01-20 12:37 | ifv | Steps to Reproduce Updated | |
2021-01-21 11:03 | szy | Assigned To | emv => msv |
2021-01-21 11:22 | msv | Summary | Modeling Data - Extrema curve-surface gives wrong result for planar surface of revolunion and circle => Modeling Data - Extrema curve-surface gives wrong result for planar surface of revolution and circle |
2021-01-21 13:17 | msv | Note Added: 0098297 | |
2021-01-21 13:17 | msv | Assigned To | msv => bugmaster |
2021-01-21 13:17 | msv | Status | resolved => reviewed |
2021-01-22 14:07 | ifv | Note Added: 0098333 | |
2021-01-22 14:08 | ifv | Note Added: 0098334 | |
2021-01-22 14:09 | ifv | Note Added: 0098335 | |
2021-01-23 12:51 | bugmaster | Note Added: 0098376 | |
2021-01-23 12:51 | bugmaster | Status | reviewed => tested |
2021-01-23 13:09 | bugmaster | Test case number | => bugs/moddata_3/bug32058 |
2021-01-23 14:14 | bugmaster | Changeset attached | => occt master b007889e |
2021-01-23 14:14 | bugmaster | Status | tested => verified |
2021-01-23 14:14 | bugmaster | Resolution | open => fixed |
2021-02-02 11:15 | git | Note Added: 0098600 | |
2021-02-02 11:18 | git | Note Added: 0098601 | |
2021-02-02 11:29 | git | Note Added: 0098603 | |
2021-02-06 14:29 | git | Note Added: 0098733 |